# Tensat

./: CMakeLists.txt  LICENSE  conanfile.py  conanfile.txt  eclass.h  egraph.h  extractor.h  index_map.h  language.h  machine.h  main.cpp  pattern.h  rewrite.h  runner.h  types.h  unionfind.h  util.h
cmake/: CMakeLists.txt  conan.cmake  configure-conan.cmake
src/: CMakeLists.txt  eclass.h  egraph.h  extractor.h  index_map.h  language.h  lg.h  machine.h  main.cpp  pattern.h  rewrite.h  runner.h  types.h  unionfind.h  util.h
